Document tooling expectations and ignore scan reports